--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -9,7 +9,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
   AWS_REGION: us-east-1
-  TERRAFORM_ACTION: apply # change to 'destroy' when tearing down infra
+  TERRAFORM_ACTION: destroy # change to 'destroy' when tearing down infra
 
 jobs:
   # -------------------------
@@ -44,21 +44,21 @@ jobs:
         working-directory: ./terraform
         run: |
           EC2_PUBLIC_IP=$(terraform output -raw ec2_public_ip)
-          echo "::set-output name=ec2_public_ip::$EC2_PUBLIC_IP"
+          echo "ec2_public_ip=$EC2_PUBLIC_IP" >> $GITHUB_OUTPUT
 
       - name: Set image name output
         id: set_image_name
         working-directory: ./terraform
         run: |
           IMAGE_NAME=$(terraform output -raw image_name)
-          echo "::set-output name=image_name::$IMAGE_NAME"
+          echo "image_name=$IMAGE_NAME" >> $GITHUB_OUTPUT
 
       - name: Set image tag output
         id: set_image_tag
         working-directory: ./terraform
         run: |
           IMAGE_TAG=$(terraform output -raw image_tag)
-          echo "::set-output name=image_tag::$IMAGE_TAG"
+          echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
 
   # -------------------------
   # Stage 2: Create ECR repo if needed
@@ -90,7 +90,7 @@ jobs:
           IMAGE_NAME: ${{ needs.deploy_aws_infrastructure.outputs.image_name }}
         run: |
           ECR_URI="${{ secrets.ECR_REGISTRY }}/$IMAGE_NAME"
-          echo "::set-output name=ecr_uri::$ECR_URI"
+          echo "ecr_uri=$ECR_URI" >> $GITHUB_OUTPUT
 
   # -------------------------
   # Stage 3: Build and push Docker image
@@ -148,8 +148,10 @@ jobs:
               sudo systemctl enable docker
             fi
 
+            # Normalize container name
+            CONTAINER_NAME=$(echo "${{ needs.deploy_aws_infrastructure.outputs.image_name }}" | tr '[:upper:]' '[:lower:]' | tr -cd 'a-z0-9_-')
+
             ECR_URI="${{ needs.create_ecr_repository.outputs.ecr_uri }}"
-            IMAGE_NAME="${{ needs.deploy_aws_infrastructure.outputs.image_name }}"
             IMAGE_TAG="${{ needs.deploy_aws_infrastructure.outputs.image_tag }}"
 
             # Login to ECR
@@ -161,10 +163,10 @@ jobs:
             sudo docker pull $ECR_URI:$IMAGE_TAG
 
             echo "Stopping old container if exists..."
-            sudo docker stop $IMAGE_NAME || true
-            sudo docker rm $IMAGE_NAME || true
+            sudo docker stop $CONTAINER_NAME || true
+            sudo docker rm $CONTAINER_NAME || true
 
             echo "Running new container..."
-            sudo docker run -d -p 5000:5000 --name $IMAGE_NAME $ECR_URI:$IMAGE_TAG
+            sudo docker run -d -p 5000:5000 --name $CONTAINER_NAME $ECR_URI:$IMAGE_TAG
 
             echo "✅ Deployment complete!"
