--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -8,7 +8,7 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_REGION: us-east-1
-  TERRAFORM_ACTION: apply   # change to 'destroy' if needed
+  TERRAFORM_ACTION: destroy   # change to 'destroy' if needed
   ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
 
 jobs:
@@ -18,6 +18,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     outputs:
+      terraform_action: ${{ env.TERRAFORM_ACTION }}
       image_name: ${{ steps.tf_outputs.outputs.IMAGE_NAME }}
       image_tag: ${{ steps.tf_outputs.outputs.IMAGE_TAG }}
       ec2_public_ip: ${{ steps.tf_outputs.outputs.EC2_PUBLIC_IP }}
@@ -37,23 +38,25 @@ jobs:
           terraform init
           terraform ${{ env.TERRAFORM_ACTION }} -auto-approve
 
-      # Set Terraform outputs
+      # Set Terraform outputs (modern syntax)
       - name: Set Terraform outputs
         id: tf_outputs
-        if: env.TERRAFORM_ACTION == 'apply'
+        if: ${{ env.TERRAFORM_ACTION == 'apply' }}
         working-directory: ./terraform
         run: |
           IMAGE_NAME=$(terraform output -raw image_name)
           IMAGE_TAG=$(terraform output -raw image_tag)
           EC2_PUBLIC_IP=$(terraform output -raw ec2_public_ip)
 
+          # Save to environment for current job steps
           echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           echo "EC2_PUBLIC_IP=$EC2_PUBLIC_IP" >> $GITHUB_ENV
 
-          echo "::set-output name=IMAGE_NAME::$IMAGE_NAME"
-          echo "::set-output name=IMAGE_TAG::$IMAGE_TAG"
-          echo "::set-output name=EC2_PUBLIC_IP::$EC2_PUBLIC_IP"
+          # Set outputs for downstream jobs
+          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_OUTPUT
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo "EC2_PUBLIC_IP=$EC2_PUBLIC_IP" >> $GITHUB_OUTPUT
 
   # -----------------------------
   # 2️⃣ ECR Repository + Docker
@@ -61,8 +64,7 @@ jobs:
   deploy_docker:
     name: Create ECR, Build & Deploy Docker
     needs: deploy
-    if: ${{ needs.deploy.outputs.terraform_action != 'destroy'}}
-
+    if: ${{ needs.deploy.outputs.terraform_action != 'destroy' }}
     runs-on: ubuntu-latest
     steps:
       # Checkout repo
