--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -1,116 +1,122 @@
-name: Deploy Pipeline
+name: Deploy Application to EC2
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 env:
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_REGION: us-east-1
-  TERRAFORM_ACTION: destroy  # change to 'destroy' if needed
-  ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
+  ECR_REPOSITORY: my-ecr-repo
 
 jobs:
-  # -----------------------------
-  # 1️⃣ Deploy AWS Infrastructure
-  # -----------------------------
   deploy:
     runs-on: ubuntu-latest
-    outputs:
-      terraform_action: ${{ env.TERRAFORM_ACTION }}
-      image_name: ${{ steps.tf_outputs.outputs.IMAGE_NAME }}
-      image_tag: ${{ steps.tf_outputs.outputs.IMAGE_TAG }}
-      ec2_public_ip: ${{ steps.tf_outputs.outputs.EC2_PUBLIC_IP }}
-    steps:
-      # Checkout repo
-      - uses: actions/checkout@v3
 
-      # Setup Terraform
-      - uses: hashicorp/setup-terraform@v2
+    steps:
+      # ----------------------------
+      # 1️⃣ Checkout code
+      # ----------------------------
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # ----------------------------
+      # 2️⃣ Configure AWS credentials
+      # ----------------------------
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      # ----------------------------
+      # 3️⃣ Setup Terraform
+      # ----------------------------
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.1.7
 
-      # Terraform init and apply/destroy
-      - name: Terraform action
-        working-directory: ./terraform
-        run: |
-          terraform init
-          terraform ${{ env.TERRAFORM_ACTION }} -auto-approve
+      - name: Terraform Init
+        run: terraform init
 
-      # Set Terraform outputs (modern syntax)
-      - name: Set Terraform outputs
-        id: tf_outputs
-        if: ${{ env.TERRAFORM_ACTION == 'apply' }}
-        working-directory: ./terraform
-        run: |
-          IMAGE_NAME=$(terraform output -raw image_name)
-          IMAGE_TAG=$(terraform output -raw image_tag)
-          EC2_PUBLIC_IP=$(terraform output -raw ec2_public_ip)
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
 
-          # Save to environment for current job steps
-          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+      # ----------------------------
+      # 4️⃣ Get EC2 Public IP
+      # ----------------------------
+      - name: Get EC2 Public IP
+        id: get_ip
+        run: |
+          EC2_PUBLIC_IP=$(terraform output -raw instance_public_ip)
           echo "EC2_PUBLIC_IP=$EC2_PUBLIC_IP" >> $GITHUB_ENV
+          echo "✅ EC2 Public IP: $EC2_PUBLIC_IP"
 
-          # Set outputs for downstream jobs
-          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_OUTPUT
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
-          echo "EC2_PUBLIC_IP=$EC2_PUBLIC_IP" >> $GITHUB_OUTPUT
-
-  # -----------------------------
-  # 2️⃣ ECR Repository + Docker
-  # -----------------------------
-  deploy_docker:
-    name: Create ECR, Build & Deploy Docker
-    needs: deploy
-    if: ${{ needs.deploy.outputs.terraform_action != 'destroy' }}
-    runs-on: ubuntu-latest
-    steps:
-      # Checkout repo
-      - uses: actions/checkout@v3
-
-      # Set variables from deploy outputs
-      - name: Set environment variables
+      # ----------------------------
+      # 5️⃣ Create ECR Repository (Safe)
+      # ----------------------------
+      - name: Create ECR Repository if not exists
         run: |
-          echo "IMAGE_NAME=${{ needs.deploy.outputs.image_name }}" >> $GITHUB_ENV
-          echo "IMAGE_TAG=${{ needs.deploy.outputs.image_tag }}" >> $GITHUB_ENV
-          echo "EC2_PUBLIC_IP=${{ needs.deploy.outputs.ec2_public_ip }}" >> $GITHUB_ENV
+          aws ecr describe-repositories --repository-names "$ECR_REPOSITORY" --region $AWS_REGION >/dev/null 2>&1 || \
+          aws ecr create-repository \
+            --repository-name "$ECR_REPOSITORY" \
+            --image-scanning-configuration scanOnPush=true \
+            --region $AWS_REGION
 
-      # Check if ECR repository exists, create if not
-      - name: Create ECR repository if not exists
+      # ----------------------------
+      # 6️⃣ Login to ECR
+      # ----------------------------
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
+      # ----------------------------
+      # 7️⃣ Build and Push Docker Image
+      # ----------------------------
+      - name: Build and push Docker image to ECR
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ github.sha }}
         run: |
-          aws ecr describe-repositories --repository-names "$IMAGE_NAME" || \
-          aws ecr create-repository --repository-name "$IMAGE_NAME"
+          echo "Building image: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+          echo "ECR_REGISTRY=$ECR_REGISTRY" >> $GITHUB_ENV
 
-      # Build & push Docker image
-      - name: Build & push Docker image
-        run: |
-          docker build -t $ECR_REGISTRY/$IMAGE_NAME:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$IMAGE_NAME:$IMAGE_TAG
-
-      # Deploy Docker container to EC2
-      - name: Deploy to EC2
+      # ----------------------------
+      # 8️⃣ Deploy to EC2
+      # ----------------------------
+      - name: Deploy Docker container on EC2
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ env.EC2_PUBLIC_IP }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
+          username: ec2-user  # Use ubuntu if it's an Ubuntu AMI
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            # Install Docker if not installed
+            # Install Docker if missing
             if ! command -v docker &> /dev/null; then
-              sudo apt-get update -y
-              sudo apt-get install -y docker.io
+              sudo yum update -y
+              sudo yum install -y docker
               sudo systemctl start docker
               sudo systemctl enable docker
             fi
 
             # Login to ECR
             aws ecr get-login-password --region ${{ env.AWS_REGION }} | \
-              sudo docker login --username AWS --password-stdin $ECR_REGISTRY
+              sudo docker login --username AWS --password-stdin ${{ env.ECR_REGISTRY }}
 
-            # Pull & run container
-            sudo docker stop $IMAGE_NAME || true
-            sudo docker rm $IMAGE_NAME || true
-            sudo docker pull $ECR_REGISTRY/$IMAGE_NAME:$IMAGE_TAG
-            sudo docker run -d -p 5000:5000 --name $IMAGE_NAME $ECR_REGISTRY/$IMAGE_NAME:$IMAGE_TAG
+            # Pull new image
+            sudo docker pull ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+
+            # Stop & remove old container if exists
+            sudo docker stop app_container || true
+            sudo docker rm app_container || true
+
+            # Run new container
+            sudo docker run -d -p 80:80 --name app_container \
+              ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+
+            echo "✅ Application deployed successfully to EC2!"
