--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -39,9 +39,11 @@ jobs:
           terraform_version: 1.1.7
 
       - name: Terraform Init
+        working-directory: ./terraform
         run: terraform init
 
       - name: Terraform Apply
+        working-directory: ./terraform
         run: terraform apply -auto-approve
 
       # ----------------------------
