--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -17,11 +17,15 @@ jobs:
   terraform:
     name: Provision AWS Resources
     runs-on: ubuntu-latest
-
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: ${{ env.AWS_REGION }}
+      AWS_REGION: us-east-1
+      TERRAFORM_VER: 1.5.1
+
+    defaults:
+      run:
+        working-directory: ./terraform
 
     steps:
       - name: Checkout Repo
@@ -34,15 +38,12 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
-        working-directory: ./terraform
 
       - name: Terraform Plan
         run: terraform plan -out=tfplan
-        working-directory: ./terraform
 
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
-        working-directory: ./terraform
 
       - name: Save Terraform Outputs
         id: tf_outputs
@@ -54,10 +55,9 @@ jobs:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: terraform
-
     env:
-      AWS_REGION: ${{ env.AWS_REGION }}
-      ECR_REPO: ${{ env.ECR_REPO }}
+      AWS_REGION: us-east-1
+      GIT_SHA: ${{ github.sha }}
 
     steps:
       - name: Checkout Repo
@@ -68,22 +68,25 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: us-east-1
 
       - name: Login to Amazon ECR
         run: |
-          aws ecr get-login-password --region ${{ env.AWS_REGION }} | \
-          docker login --username AWS --password-stdin ${{ env.ECR_REPO_URL }}
+          aws ecr get-login-password --region $AWS_REGION | \
+          docker login --username AWS --password-stdin $ECR_REPO_URL
 
       - name: Build and Push Docker Image
         run: |
-          docker build -t ${{ env.ECR_REPO_URL }}:${{ env.GIT_SHA }} .
-          docker push ${{ env.ECR_REPO_URL }}:${{ env.GIT_SHA }}
+          docker build -t $ECR_REPO_URL:$GIT_SHA .
+          docker push $ECR_REPO_URL:$GIT_SHA
 
   deploy:
     name: Deploy on EC2
     runs-on: ubuntu-latest
     needs: build_push
+    env:
+      AWS_REGION: us-east-1
+      GIT_SHA: ${{ github.sha }}
 
     steps:
       - name: Checkout Repo
@@ -101,8 +104,8 @@ jobs:
             docker rmi -f $(docker images -q) || true
 
             echo "Logging into ECR..."
-            aws ecr get-login-password --region ${{ env.AWS_REGION }} | \
-              docker login --username AWS --password-stdin ${{ env.ECR_REPO_URL }}
+            aws ecr get-login-password --region $AWS_REGION | \
+              docker login --username AWS --password-stdin $ECR_REPO_URL
 
             echo "Running new container..."
-            docker run -d -p 80:5000 --name flask-app ${{ env.ECR_REPO_URL }}:${{ env.GIT_SHA }}
+            docker run -d -p 80:5000 --name flask-app $ECR_REPO_URL:$GIT_SHA
