--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   AWS_REGION: us-east-1
-  ECR_REPO: docker-flask
+  ECR_REPO: FlaskAppECR
   EC2_NAME: flaskapp-web-server
   TERRAFORM_VER: 1.5.1
   GIT_SHA: ${{ github.sha }}
@@ -20,8 +20,6 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: us-east-1
-      TERRAFORM_VER: 1.5.1
 
     defaults:
       run:
@@ -29,7 +27,7 @@ jobs:
 
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
@@ -42,33 +40,36 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -out=tfplan
 
-      - name: Terraform destroy
-        run: terraform destroy -auto-approve
+      - name: Terraform Apply
+        run: terraform apply -auto-approve tfplan
 
       - name: Save Terraform Outputs
         id: tf_outputs
         run: |
-          echo "EC2_PUBLIC_IP=$(terraform output -raw ec2_public_ip)" >> $GITHUB_ENV
-          echo "ECR_REPO_URL=$(terraform output -raw ecr_repo_url)" >> $GITHUB_ENV
+          # Clean output and safely write to GITHUB_ENV
+          EC2_IP=$(terraform output -raw ec2_public_ip | tr -d '\r\n')
+          ECR_URL=$(terraform output -raw ecr_repo_url | tr -d '\r\n')
+          echo "EC2_PUBLIC_IP=\"$EC2_IP\"" >> $GITHUB_ENV
+          echo "ECR_REPO_URL=\"$ECR_URL\"" >> $GITHUB_ENV
 
   build_push:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: terraform
     env:
-      AWS_REGION: us-east-1
+      AWS_REGION: ${{ env.AWS_REGION }}
       GIT_SHA: ${{ github.sha }}
 
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
         run: |
@@ -85,12 +86,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_push
     env:
-      AWS_REGION: us-east-1
+      AWS_REGION: ${{ env.AWS_REGION }}
       GIT_SHA: ${{ github.sha }}
 
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: SSH into EC2 and Deploy Container
         uses: appleboy/ssh-action@v1.0.3
@@ -100,8 +101,8 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             echo "Cleaning old containers..."
-            docker rm -f $(docker ps -aq) || true
-            docker rmi -f $(docker images -q) || true
+            docker rm -f flask-app || true
+            docker rmi -f $ECR_REPO_URL:$GIT_SHA || true
 
             echo "Logging into ECR..."
             aws ecr get-login-password --region $AWS_REGION | \
