--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -41,7 +41,7 @@ jobs:
         run: terraform plan -out=tfplan
 
       - name: Terraform destroy
-        run: terraform destroy -auto-approve 
+        run: terraform apply -auto-approve tfplan
 
       - name: Save Terraform Outputs
         id: tf_outputs
@@ -57,7 +57,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: terraform
     env:
-      AWS_REGION: usr-east-1
+      AWS_REGION: us-east-1
       GIT_SHA: ${{ github.sha }}
 
     steps:
