--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -41,7 +41,7 @@ jobs:
         run: terraform plan -out=tfplan
 
       - name: Terraform apply
-        run: terraform apply -auto-approve tfplan
+        run: terraform destroy -auto-approve 
 
       - name: Save Terraform Outputs
         id: tf_outputs
@@ -49,8 +49,8 @@ jobs:
           # Clean output and safely write to GITHUB_ENV
           EC2_IP=$(terraform output -raw ec2_public_ip | tr -d '\r\n')
           ECR_URL=$(terraform output -raw ecr_repo_url | tr -d '\r\n')
-          echo "EC2_PUBLIC_IP=\"$EC2_IP\"" >> $GITHUB_ENV
-          echo "ECR_REPO_URL=\"$ECR_URL\"" >> $GITHUB_ENV
+          echo "EC2_PUBLIC_IP=$EC2_IP" >> $GITHUB_ENV
+          echo "ECR_REPO_URL=$ECR_URL" >> $GITHUB_ENV
 
   build_push:
     name: Build and Push Docker Image
