--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -41,7 +41,7 @@ jobs:
         run: terraform plan -out=tfplan
 
       - name: Terraform apply
-        run: terraform apply -auto-approve tfplan
+        run: terraform destroy -auto-approve 
 
       - name: Save Terraform Outputs
         id: tf_outputs
@@ -51,6 +51,7 @@ jobs:
           ECR_URL=$(terraform output -raw ecr_repo_url | tr -d '\r\n')
           echo "EC2_PUBLIC_IP=$EC2_IP" >> $GITHUB_ENV
           echo "ECR_REPO_URL=$ECR_URL" >> $GITHUB_ENV
+        working-directory: ./terraform
 
   build_push:
     name: Build and Push Docker Image
