--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -66,7 +66,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: terraform
     env:
-      AWS_REGION: ${{ env.AWS_REGION }}
+      AWS_REGION: us-east-1
       GIT_SHA: ${{ github.sha }}
       ECR_REPO_URL: ${{ needs.terraform.outputs.ecr_repo_url }}
 
@@ -96,7 +96,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_push
     env:
-      AWS_REGION: ${{ env.AWS_REGION }}
+      AWS_REGION: us-east-1
       GIT_SHA: ${{ github.sha }}
       EC2_PUBLIC_IP: ${{ needs.terraform.outputs.ec2_public_ip }}
       ECR_REPO_URL: ${{ needs.terraform.outputs.ecr_repo_url }}
